Fixed styling and overflow

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,6 @@ td{
 	border: 2px white solid;
 	height:30px;
 	min-width: 50px;
-	/*min-height: 80px;*/
 	vertical-align: top;
 }
 td:hover{
@@ -121,6 +120,7 @@ td:hover{
 	margin-left: 20px;
 	margin-top: 40px;
 	display:block;
+	width: 90%;
 }
 .siblings, .child{
 	background: #ccc;
@@ -130,18 +130,26 @@ td:hover{
 	font-size: 22px;
 	padding:0;
 	margin: 0  30px 0 0;
+	-webkit-border-radius: 6px;
+    border-radius: 6px;
+    display:inline;
+
 }
 .siblings{
-	display:inline;
-	overflow:scroll;
+	float: left;
+	 overflow-y: auto;
+	 overflow-x: hidden;
+	margin-left: 100px;
 }
 .siblings ul li{
 	font-size: 18px;
+	cursor: text;
+	text-decoration: none;
 }
 .child{
-	top:0;
+
 	position: relative;
-	display:inline;
+
 }
 tr.satisfactory td.intermediate ul{
 
